homepage and routing

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <style>
     @import url('https://fonts.googleapis.com/css?family=Prata');
+    @import url('https://fonts.googleapis.com/css?family=Montserrat');
     </style>
     <title>bookish</title>
   </head>
